fixed signup button radius and nav spacing

--- a/css/_components.scss
+++ b/css/_components.scss
@@ -16,6 +16,6 @@
 	color: $color-primary;
 	padding: 20px 40px;
 	border: 2px solid $color-primary;
-	border-radius: 5px;
+	border-radius: 10px;
 	text-decoration: none;
 }
